# ISKCON-Translate

./: .gitignore  README.md  backlog.md  codecov.yml  demo_cross_segment_detection.py  demo_text_processing.py  features.md  pyvenv.cfg  requirements.txt  retrain.py  run.py  simple_test.py  trainer_state.json  translate.py  translate_new.py.txt
gita_vocab/: README.md  analyze_html.py  check_results.py  create_sample_content.py  debug_pattern.py  debug_regex.py  debug_scraper.py  pyproject.toml  sanskrit_improved_test.jsonl  sanskrit_test.jsonl  sanskrit_web_test.jsonl  scraper.py  test_scraper.py  test_small.jsonl  verse_sanskrit_final.jsonl
gita_vocab/corrected_output/glossaries/: common_200.txt  common_200_ascii.txt
gita_vocab/corrected_output/glossaries/by_chapter/: 01.txt  01_ascii.txt  02.txt  02_ascii.txt  04.txt  04_ascii.txt  07.txt  07_ascii.txt  09.txt  09_ascii.txt  15.txt  15_ascii.txt  18.txt  18_ascii.txt
gita_vocab/final_sanskrit_glossaries/: raw_synonyms.jsonl
gita_vocab/final_sanskrit_glossaries/glossaries/: common_200_ascii.txt
gita_vocab/final_sanskrit_glossaries/glossaries/by_chapter/: 01_ascii.txt  02_ascii.txt  03_ascii.txt  04_ascii.txt  05.txt  05_ascii.txt  06_ascii.txt  07.txt  09.txt  09_ascii.txt  10.txt  10_ascii.txt  12.txt  13_ascii.txt  14.txt  14_ascii.txt  15.txt  17.txt  18.txt
gita_vocab/gita_vocab/: __init__.py  cli.py  generator.py  normalizer.py  scraper.py
gita_vocab/output/: raw_synonyms.jsonl
gita_vocab/output/glossaries/: README.md  common_200.txt
gita_vocab/output/glossaries/by_chapter/: 01.txt  02.txt  03.txt  04.txt  06.txt  07_ascii.txt  08.txt  08_ascii.txt  11.txt  11_ascii.txt  (+7 more)
gita_vocab/sanskrit_output/: gita_tokens.csv  raw_synonyms.jsonl
gita_vocab/sanskrit_output/glossaries/: README.md  common_200.txt  common_200_ascii.txt
gita_vocab/sanskrit_web_output/: gita_tokens.csv  raw_synonyms.jsonl
gita_vocab/sanskrit_web_output/glossaries/: common_200.txt  common_200_ascii.txt
gita_vocab/test_output/: gita_tokens.csv  raw_synonyms.jsonl
gita_vocab/test_output/glossaries/: README.md  common_200.txt  common_200_ascii.txt
gita_vocab/tests/: __init__.py  test_basic.py
(+156 files in other folders)
